auto_branch_pushes/kkimdev/static-fix/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eg2
spec:
  gatewayClassName: eg
  listeners:
    - name: http-web
      port: 80
      protocol: HTTP

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-web-route
spec:
  parentRefs:
    - name: eg2
      sectionName: http-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ppluto-homepage-service
          port: 80
